feat: openAI 연동 함수 추가 및 openAI key 값 env파일 추가 및 webpack 설정

--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,6 @@
   "editorType": ["figma", "figjam"],
   "ui": "dist/ui.html",
   "networkAccess": {
-    "allowedDomains": ["none"]
+    "allowedDomains": ["https://api.openai.com"]
   }
 }
