--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "css-loader": "^6.2.0",
+    "dotenv": "^16.5.0",
     "eslint": "^8.57.1",
     "html-inline-script-webpack-plugin": "^3.1.0",
     "html-webpack-plugin": "^5.3.2",
