--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "webpack-cli": "^5.1.1"
   },
   "dependencies": {
+    "firebase": "^11.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
