--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,6 @@
     "resolveJsonModule": true, // json import 허용
     "allowSyntheticDefaultImports": true // 기본 import 허용
   },
-  "include": ["src/**/*", "webpack.config.js"],
+  "include": ["src/**/*", "webpack.config.js", "utils/**/*"],
   "exclude": ["node_modules"]
 }
