feat: firebase licenke 자동로그인 기능 개발

--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,9 @@
   "editorType": ["figma", "figjam"],
   "ui": "dist/ui.html",
   "networkAccess": {
-    "allowedDomains": ["https://api.openai.com"]
+    "allowedDomains": [
+      "https://api.openai.com",
+      "https://firestore.googleapis.com"
+    ]
   }
 }
