feat: 포트원 결제연동 테스트 기능 개발 중

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "webpack-cli": "^5.1.1"
   },
   "dependencies": {
+    "@portone/browser-sdk": "^0.0.21",
     "firebase": "^11.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
