--- a/front/package.json
+++ b/front/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@portone/browser-sdk": "^0.0.21",
     "firebase": "^11.8.1",
+    "openai": "^5.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
